k8s-specifications/db-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None  # makes it "Headless"
  selector:
    app: db
