k8s-specifications/policy-allow-vote-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis  # Apply TO Redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vote   # Allow FROM Vote
    ports:
    - protocol: TCP
      port: 6379
